added IT and Admin account

--- a/views/events.hbs
+++ b/views/events.hbs
@@ -5,6 +5,10 @@
         <option value="pusdatin@pnj.ac.id">Pusdatin</option>
         <option value="dasi@pnj.ac.id">DASI</option>
         <option value="akademik@pnj.ac.id">Akademik</option>
+        <option value="inherent@pnj.ac.id">Inherent</option>
+        <option value="transformasi.digital@pnj.ac.id">Transformasi Digital</option>
+        <option value="it@pnj.ac.id">IT</option>
+        <option value="admin@pnj.ac.id">Admin</option>
     </select>
 </div>
 <br />
